--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^1.0.0-beta.5",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.13.0"
